animation changes to prevent overflowx

--- a/src/components/slideIn.css
+++ b/src/components/slideIn.css
@@ -1,10 +1,11 @@
 .slide-in-from-left {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(-50%);
     transition: opacity 1.5s, transform 3s;
   }
   
   .slide-in-active {
     opacity: 1;
     transform: translateX(0);
+
   }
