--- a/src/components/slideInR.css
+++ b/src/components/slideInR.css
@@ -1,10 +1,12 @@
 .slide-in-from-right {
     opacity: 0;
-    transform: translateX(100px);
+    transform: translateX(10%);
     transition: opacity 1.5s, transform 3s;
+
   }
   
   .slide-in-active2 {
     opacity: 1;
     transform: translateX(0);
+
   }
